--- a/Sesion01_Introduccion/Sesion01_Introduccion.csproj
+++ b/Sesion01_Introduccion/Sesion01_Introduccion.csproj
@@ -75,10 +75,18 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Saludo.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Saludo.aspx.cs">
+      <DependentUpon>Saludo.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Saludo.aspx.designer.cs">
+      <DependentUpon>Saludo.aspx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
