--- a/Sesion01_Introduccion/Sesion01_Introduccion.csproj
+++ b/Sesion01_Introduccion/Sesion01_Introduccion.csproj
@@ -75,6 +75,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <None Include=".gitkeep" />
     <Content Include="Saludo.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
